--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
             <version>6.8.21</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.dangdang</groupId>
+            <artifactId>sharding-jdbc-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
