--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,13 @@
             <version>6.8.21</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.16</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
