--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,7 @@
             <groupId>com.dangdang</groupId>
             <artifactId>sharding-jdbc-core</artifactId>
             <version>1.0.0</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
