--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
             <version>1.0.13</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+
         <!-- mysql 协议 -->
         <dependency>
             <groupId>mysql</groupId>
