--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- 测试ibatis 2.3.0  -->
+        <dependency>
+            <groupId>org.apache.ibatis</groupId>
+            <artifactId>ibatis-sqlmap</artifactId>
+            <version>2.3.0</version>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
