--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,14 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.0.13</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
             <version>1.0.13</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
